testsuite/tests/properties/invalid_cast/test.out
== correct.lkt ==
Code generation was successful

== cross_node.lkt ==
cross_node.lkt:7:36: error: Cannot cast BarNode to ListNode: only (up/down)casting is allowed
7 |     @export fun prop(): ListNode = node.bar_node_parent.as[ListNode]
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== not_node.lkt ==
not_node.lkt:6:31: error: One can only cast to an ASTNode subtype or to an entity
6 |     @export fun prop(): Int = node.parent.as[Int]
  |                               ^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
